[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-triage-env"
version = "0.1.0"
description = "Support Triage Pro — Research-grade SRE incident triage benchmark for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai>=1.0.0",
    "uvicorn[standard]>=0.29.0",
    "fastapi>=0.110.0",
    "gradio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

# NOTE: The original [project.scripts] and [tool.setuptools.packages] entries
# that mapped "triage_env" / "triage_env.server" have been removed.
# Those names did not exist as importable packages on disk (the root folder
# is triage-env/, not a Python package). The server runs via `python main.py`
# or Docker CMD — no console_scripts entry point is needed.
# Re-add a proper src/ layout + package mapping only if you publish to PyPI.

[tool.setuptools]
packages = ["server"]