[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-triage-env"
version = "0.1.0"
description = "Support Triage Pro — Research-grade SRE incident triage benchmark for OpenEnv"
requires-python = ">=3.10"

# Aligned with official openenv-incident_triage_env spec.
# openenv-core ships websockets + gradio; we only declare application deps here.
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.29.0",
    "fastapi>=0.110.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["server"]